--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,1 +1,1 @@
-filter=-legal/copyright,-readability/todo,-runtime/explicit
+filter=-legal/copyright,-readability/todo,-runtime/explicit,-build/include
