--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,1 +1,1 @@
-filter=-legal/copyright,-readability/todo,-runtime/explicit,-build/include
+filter=-legal/copyright,-readability/todo,-runtime/explicit,-build/include,-build/header_guard
