--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -16,4 +16,4 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 # 
 
-filter=-legal/copyright,-readability/todo,-runtime/explicit,-build/include,-build/header_guard
+filter=-legal/copyright,-readability/todo,-runtime/explicit,-build/include,-build/header_guard,-runtime/references
