Update README.md Move macros to Makefile

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,4 +1,8 @@
-CXXFLAGS=-Wall -g -std=c++11 -lgmp -lgmpxx
+TR_FLAG = -DTAIL_RECU
+LS_FLAG = -DLIMIT_STACK='0x800000 - 0x10000'
+O_FLAG = -O3
+
+CXXFLAGS=-Wall -g -std=c++11 -lgmp -lgmpxx $(TR_FLAG) $(LS_FLAG) $(O_FLAG)
 
 STRUCTS = $(wildcard structs/*.h)
 
@@ -11,8 +15,7 @@ all: backend test
 translate.o: lex.l translate.y
 	lex lex.l
 	yacc translate.y
-	$(CXX) $(CXXFLAGS) y.tab.c -g -c -o $@ \
-		-Wno-unused-function #-Wno-class-memaccess
+	$(CXX) $(CXXFLAGS) y.tab.c -g -c -o $@ -Wno-unused-function
 
 backend: backend.cpp $(LIBRARY)
 	$(CXX) $(CXXFLAGS) -o $@ $^
