--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,6 +1,6 @@
 TR_FLAG = -DTAIL_RECU
 LS_FLAG = -DLIMIT_STACK='0x800000 - 0x10000'
-O_FLAG = -O3
+# O_FLAG = -O3
 EXP_POS_FLAG = -DREMOVE_EXP_POS
 
 CUSTOM_FLAGS = $(TR_FLAG) $(LS_FLAG) $(O_FLAG) $(EXP_POS_FLAG)
