Debuged complex.cpp; trying to add sptr

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -2,8 +2,9 @@ TR_FLAG = -DTAIL_RECU
 LS_FLAG = -DLIMIT_STACK='0x800000 - 0x10000'
 # O_FLAG = -O3
 EXP_POS_FLAG = -DREMOVE_EXP_POS
+#PTR_FLAG = -DCUSTOM_PTR
 
-CUSTOM_FLAGS = $(TR_FLAG) $(LS_FLAG) $(O_FLAG) $(EXP_POS_FLAG)
+CUSTOM_FLAGS = $(TR_FLAG) $(LS_FLAG) $(O_FLAG) $(EXP_POS_FLAG) $(PTR_FLAG)
 
 CXXFLAGS=-Wall -g -std=c++11 -lgmp -lgmpxx $(CUSTOM_FLAGS)
 
