Change make file

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,10 +1,31 @@
-TR_FLAG=-DTAIL_RECU
-LS_FLAG=-DLIMIT_STACK='0x800000 - 0x10000'
-# O_FLAG=-O3
-EXP_POS_FLAG=-DREMOVE_EXP_POS
-PTR_FLAG=-DCUSTOM_PTR
+ifeq ($(ALL),1)
+TR := 1
+LS := 1
+EP := 1
+PTR := 1
+endif
+ifeq ($(TR),1)
+CUSTOM_FLAGS += -DTAIL_RECU
+endif
+ifeq ($(LS),1)
+CUSTOM_FLAGS += -DLIMIT_STACK='0x800000 - 0x10000'
+endif
+ifeq ($(O),1)
+CUSTOM_FLAGS += -O1
+endif
+ifeq ($(O),2)
+CUSTOM_FLAGS += -O2
+endif
+ifeq ($(O),3)
+CUSTOM_FLAGS += -O3
+endif
+ifeq ($(EP),1)
+CUSTOM_FLAGS += -DREMOVE_EXP_POS
+endif
+ifeq ($(PTR),1)
+CUSTOM_FLAGS += -DCUSTOM_PTR
+endif
 
-CUSTOM_FLAGS = $(TR_FLAG) $(LS_FLAG) $(O_FLAG) $(EXP_POS_FLAG) $(PTR_FLAG)
 LINKFLAGS=-lgmp -lgmpxx
 CXXFLAGS=-Wall -g -std=c++11 $(CUSTOM_FLAGS)
 
